--- a/index.html
+++ b/index.html
@@ -15,6 +15,35 @@
 <body>
     <h1>Hello World! I´m InfoSec Cinema!</h1>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-auto">
+              Search box
+            </div>
+            <div class="col col-lg-2">
+              <div class="row">
+                Movie - Event selector
+              </div>
+              <div class="row">
+                Clear button 
+              </div>
+            </div>
+          </div>
+          <div class="row">
+              Movies - Events (show all movies first)
+          </div>
+          <div class="row">
+            <div class="col">
+              1 of 3
+            </div>
+            <div class="col">
+              2 of 3
+            </div>
+            <div class="col">
+              3 of 3
+            </div>
+          </div>
+      </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
