--- a/index.html
+++ b/index.html
@@ -8,42 +8,47 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
+        <link rel="stylesheet" href="css/main.css">
 
     <title>InfoSec Cinema</title>
 </head>
 
 <body>
-    <h1>Hello World! I´m InfoSec Cinema!</h1>
 
     <div class="container">
+        <div class="navbar navbar-default">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Welcome to InfoSec Cinema</a>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-auto">
-              Search box
+                Search box
             </div>
             <div class="col col-lg-2">
-              <div class="row">
-                Movie - Event selector
-              </div>
-              <div class="row">
-                Clear button 
-              </div>
+                <div class="row">
+                    Movie - Event selector
+                </div>
+                <div class="row">
+                    Clear button
+                </div>
             </div>
-          </div>
-          <div class="row">
-              Movies - Events (show all movies first)
-          </div>
-          <div class="row">
+        </div>
+        <div class="row">
+            Movies - Events (show all movies first)
+        </div>
+        <div class="row">
             <div class="col">
-              1 of 3
-            </div>
-            <div class="col">
-              2 of 3
+                1 of 3
             </div>
             <div class="col">
-              3 of 3
+                2 of 3
             </div>
-          </div>
-      </div>
+            <div class="col">
+                3 of 3
+            </div>
+        </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
