jquery min no slim

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <script src="js/bundle.js"></script>
     <script src="js/infosec-cinema.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="js/jquery-3.3.1.slim.min.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
