--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         </div>
     </div>
     <div class="container-fluid">
+            <div class="row">
+                    InfoSec Cinema is database of movies and information security events. Intially this tool will show you all the movies with their corresponding events. You can filter which events you would like to show by writting keywords or selecting STRIDE and ISO Control filters. You can contribute with you own movies by contributing on the following Github <a href="https://github.com/guizos/infosec-cinema">repo</a>.
+            </div>
         <div class="row">
             <div class="col">
                 <div class="input-group input-group-lg mb-3">
