--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container-fluid">
             <div class="row">
                     <div class="col mb-4">
-                    InfoSec Cinema is database of movies and information security events. Intially this tool will show you all the movies with their corresponding events. You can filter which events you would like to show by writting keywords or selecting STRIDE and ISO Control filters. You can contribute with you own movies by contributing on the following Github <a href="https://github.com/guizos/infosec-cinema">repo</a>.
+                            InfoSec Cinema is a database of movies and information security events. Initially this tool will show you all the movies with their corresponding events. You can filter which events you would like to show by writing keywords or selecting STRIDE and ISO Control filters. You can add your own movies by contributing on the following Github <a href="https://github.com/guizos/infosec-cinema">repo</a>.
                 </div>
             </div>
         <div class="row">
