removed db and other useless things

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         </div>
     </div>
     <div class="container-fluid">
-            <div class="row">
-                    <div class="col mb-4">
-                            InfoSec Cinema is a database of movies and information security events. Initially this tool will show you all the movies with their corresponding events. You can filter which events you would like to show by writing keywords or selecting STRIDE and ISO Control filters. You can add your own movies by contributing on the following Github <a href="https://github.com/guizos/infosec-cinema">repo</a>.
-                </div>
+        <div class="row">
+            <div class="col mb-4">
+                InfoSec Cinema is a database of movies and information security events. Initially this tool will show you all the movies with their corresponding events. You can filter which events you would like to show by writing keywords or selecting STRIDE and ISO
+                Control filters. You can add your own movies by contributing on the following Github <a href="https://github.com/guizos/infosec-cinema">repo</a>.
             </div>
+        </div>
         <div class="row">
             <div class="col">
                 <div class="input-group input-group-lg mb-3">
-                    <input type="text" class="form-control" id="search-field" placeholder="Search for a keyword or keywords" aria-label="Search for a keyword or keywords"
-                        aria-describedby="basic-addon2">
+                    <input type="text" class="form-control" id="search-field" placeholder="Search for a keyword or keywords" aria-label="Search for a keyword or keywords" aria-describedby="basic-addon2">
                     <div class="input-group-append">
                         <button class="btn btn-outline-secondary" id="search" type="button">Search</button>
                     </div>
@@ -36,12 +36,12 @@
                     </div>
                 </div>
             </div>
-           
+
         </div>
         <div class="row">
-                <div class="col">
+            <div class="col">
                 <label>Filter by:</label>
-                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col">
@@ -50,8 +50,7 @@
                     <div class="card">
                         <div class="card-header-sm" id="headingOne">
                             <h5 class="mb-0 p-0">
-                                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
-                                    aria-controls="collapseOne">
+                                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                     STRIDE Elements
                                 </button>
                             </h5>
@@ -90,8 +89,7 @@
                     <div class="card mb-3">
                         <div class="card-header-sm" id="headingTwo">
                             <h5 class="mb-0">
-                                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
-                                    aria-controls="collapseTwo">
+                                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                     ISO Controls
                                 </button>
                             </h5>
@@ -176,14 +174,14 @@
             </div>
         </div>
     </div>
-    
+
     </div>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <!-- JavaScript -->
-    <script src="js/bundle.js"></script>
+    <script src="js/infosec-cinema.js"></script>
 </body>
 
 </html>
