First beta version with search

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="input-group input-group-lg mb-3">
                     <input type="text" class="form-control" id="search-field" placeholder="Search for a keyword or keywords" aria-label="Search for a keyword or keywords" aria-describedby="basic-addon2">
                     <div class="input-group-append">
-                        <button class="btn btn-outline-secondary" id="search" type="button">Search</button>
+                        <button class="btn btn-outline-secondary" id="search" type="button">Filter</button>
                     </div>
                     <div class="input-group-append">
                         <button class="btn btn-outline-secondary" id="clear" type="button">Clear</button>
