Added link to presentation

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             </div>
         </div>
         <div class="row">
+            <div class="col mb-4">
+                We've run InfoSec cinema twice with Rogue One as our selected film. You can access the presentation used during our two sessions <a href="https://github.com/guizos/infosec-cinema/files/Presentation.pdf">here</a>.
+            </div>
+        </div>
+        <div class="row">
             <div class="col">
                 <div class="input-group input-group-lg mb-3">
                     <input type="text" class="form-control" id="search-field" placeholder="Search for a keyword or keywords" aria-label="Search for a keyword or keywords" aria-describedby="basic-addon2">
