fixed url error

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="row">
             <div class="col mb-4">
-                We've run InfoSec cinema twice with Rogue One as our selected film. You can access the presentation used during our two sessions <a href="https://github.com/guizos/infosec-cinema/files/Presentation.pdf">here</a>.
+                We've run InfoSec cinema twice with Rogue One as our selected film. You can access the presentation used during our two sessions <a href="https://guizos.github.io/infosec-cinema/files/Presentation.pdf">here</a>.
             </div>
         </div>
         <div class="row">
